refactor security filters and job image handling; improve null checks and type references